// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GithubCorner direction="left" /> 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="left"
    href="/"
    octoColor="#fff"
    size={80}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "left": 0,
            "position": "absolute",
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M250 0L135 115h-15l-12 27L0 250V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
          style={
            Object {
              "WebkitTransformOrigin": "120px 144px",
              "transformOrigin": "120px 144px",
            }
          }
        />
        <path
          className="octo-body"
          d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
        />
      </svg>,
      "className": "github-corner",
      "href": "/",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M250 0L135 115h-15l-12 27L0 250V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
            style={
              Object {
                "WebkitTransformOrigin": "120px 144px",
                "transformOrigin": "120px 144px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "left": 0,
          "position": "absolute",
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M250 0L135 115h-15l-12 27L0 250V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16",
            "style": Object {
              "WebkitTransformOrigin": "120px 144px",
              "transformOrigin": "120px 144px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "left": 0,
              "position": "absolute",
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M250 0L135 115h-15l-12 27L0 250V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
            style={
              Object {
                "WebkitTransformOrigin": "120px 144px",
                "transformOrigin": "120px 144px",
              }
            }
          />
          <path
            className="octo-body"
            d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
          />
        </svg>,
        "className": "github-corner",
        "href": "/",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M250 0L135 115h-15l-12 27L0 250V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "120px 144px",
                  "transformOrigin": "120px 144px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "left": 0,
            "position": "absolute",
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M250 0L135 115h-15l-12 27L0 250V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M122 109c15-9 9-19 9-19-3-7-2-11-2-11 1-7-3-2-3-2-4 5-2 11-2 11 3 10-5 15-9 16",
              "style": Object {
                "WebkitTransformOrigin": "120px 144px",
                "transformOrigin": "120px 144px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M135 115s-4 2-5 0l-14-14c-3-2-6-3-8-3 8-11 15-24-2-41-5-5-10-7-16-7-1-2-3-7-12-11 0 0-5 3-7 16-4 2-8 5-12 9s-7 8-9 12c-14 4-17 9-17 9 4 8 9 11 11 11 0 6 2 11 7 16 16 16 30 10 41 2 0 3 1 7 5 11l12 11c1 2-1 6-1 6z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`GithubCorner with non-left directions 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    href="/"
    octoColor="#fff"
    size={80}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M0 0l115 115h15l12 27 108 108V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
          style={
            Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            }
          }
        />
        <path
          className="octo-body"
          d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
      </svg>,
      "className": "github-corner",
      "href": "/",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M0 0l115 115h15l12 27 108 108V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
            "style": Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />
        </svg>,
        "className": "github-corner",
        "href": "/",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M0 0l115 115h15l12 27 108 108V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "130px 106px",
                  "transformOrigin": "130px 106px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M0 0l115 115h15l12 27 108 108V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
              "style": Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`GithubCorner with non-left directions 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="invalid"
    href="/"
    octoColor="#fff"
    size={80}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M0 0l115 115h15l12 27 108 108V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
          style={
            Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            }
          }
        />
        <path
          className="octo-body"
          d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
      </svg>,
      "className": "github-corner",
      "href": "/",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M0 0l115 115h15l12 27 108 108V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
            "style": Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />
        </svg>,
        "className": "github-corner",
        "href": "/",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M0 0l115 115h15l12 27 108 108V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "130px 106px",
                  "transformOrigin": "130px 106px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M0 0l115 115h15l12 27 108 108V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
              "style": Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`can use svgStyle prop 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    href="/"
    octoColor="#fff"
    size={80}
    svgStyle={
      Object {
        "mixBlendMode": "darken",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "mixBlendMode": "darken",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M0 0l115 115h15l12 27 108 108V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
          style={
            Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            }
          }
        />
        <path
          className="octo-body"
          d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
      </svg>,
      "className": "github-corner",
      "href": "/",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "mixBlendMode": "darken",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M0 0l115 115h15l12 27 108 108V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
            "style": Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "mixBlendMode": "darken",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />
        </svg>,
        "className": "github-corner",
        "href": "/",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M0 0l115 115h15l12 27 108 108V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "130px 106px",
                  "transformOrigin": "130px 106px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "mixBlendMode": "darken",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M0 0l115 115h15l12 27 108 108V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
              "style": Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`default <GithubCorner /> 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    href="/"
    octoColor="#fff"
    size={80}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M0 0l115 115h15l12 27 108 108V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
          style={
            Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            }
          }
        />
        <path
          className="octo-body"
          d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
      </svg>,
      "className": "github-corner",
      "href": "/",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M0 0l115 115h15l12 27 108 108V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
            "style": Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />
        </svg>,
        "className": "github-corner",
        "href": "/",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M0 0l115 115h15l12 27 108 108V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "130px 106px",
                  "transformOrigin": "130px 106px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M0 0l115 115h15l12 27 108 108V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
              "style": Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`it mounts 1`] = `"<a href=\\"/\\" class=\\"github-corner\\" aria-label=\\"Open GitHub project\\"><svg width=\\"80\\" height=\\"80\\" viewBox=\\"0 0 250 250\\" style=\\"position: absolute; top: 0px; fill: #fff; right: 0px;\\"><path class=\\"octo-banner\\" d=\\"M0 0l115 115h15l12 27 108 108V0z\\" fill=\\"#151513\\"></path><path class=\\"octo-arm\\" d=\\"M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16\\"></path><path class=\\"octo-body\\" d=\\"M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z\\"></path></svg></a>"`;

exports[`it mounts 2`] = `
Object {
  "headAfter": "<style type=\\"text/css\\" id=\\"____GITHUB_CORNER_SUPER_SECRET___\\">
.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0%, 100% {
    transform: rotate(0deg);
  }

  20%, 60% {
    transform: rotate(-25deg);
  }

  40%, 80% {
    transform: rotate(10deg);
  }
}

@media (max-width: 500px) {
    .github-corner:hover .octo-arm {
        animation: none;
    }

    .github-corner .octo-arm {
        animation: octocat-wave 560ms ease-in-out;
    }
}
</style>",
  "headBefore": "",
}
`;

exports[`merge className attribute 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    className="wow cool"
    direction="right"
    href="/"
    octoColor="#fff"
    size={80}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M0 0l115 115h15l12 27 108 108V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
          style={
            Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            }
          }
        />
        <path
          className="octo-body"
          d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
      </svg>,
      "className": "github-corner wow cool",
      "href": "/",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M0 0l115 115h15l12 27 108 108V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
            "style": Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />
        </svg>,
        "className": "github-corner wow cool",
        "href": "/",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M0 0l115 115h15l12 27 108 108V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "130px 106px",
                  "transformOrigin": "130px 106px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M0 0l115 115h15l12 27 108 108V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
              "style": Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`styles have already been injected 1`] = `
Object {
  "headAfter": "<style id=\\"____GITHUB_CORNER_SUPER_SECRET___\\">.mock {}</style>",
  "headBefore": "<style id=\\"____GITHUB_CORNER_SUPER_SECRET___\\">.mock {}</style>",
}
`;

exports[`when document.head does not exist 1`] = `"<a href=\\"/\\" class=\\"github-corner\\" aria-label=\\"Open GitHub project\\"><svg width=\\"80\\" height=\\"80\\" viewBox=\\"0 0 250 250\\" style=\\"position: absolute; top: 0px; fill: #fff; right: 0px;\\"><path class=\\"octo-banner\\" d=\\"M0 0l115 115h15l12 27 108 108V0z\\" fill=\\"#151513\\"></path><path class=\\"octo-arm\\" d=\\"M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16\\"></path><path class=\\"octo-body\\" d=\\"M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z\\"></path></svg></a>"`;

exports[`when document.head does not exist 2`] = `
Array [
  Array [
    <style
      id="____GITHUB_CORNER_SUPER_SECRET___"
      type="text/css"
    >
      
.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0%, 100% {
    transform: rotate(0deg);
  }

  20%, 60% {
    transform: rotate(-25deg);
  }

  40%, 80% {
    transform: rotate(10deg);
  }
}

@media (max-width: 500px) {
    .github-corner:hover .octo-arm {
        animation: none;
    }

    .github-corner .octo-arm {
        animation: octocat-wave 560ms ease-in-out;
    }
}

    </style>,
  ],
]
`;

exports[`when style.stylesheet exists we use cssText 1`] = `
"
.github-corner:hover .octo-arm {
  animation: octocat-wave 560ms ease-in-out;
}

@keyframes octocat-wave {
  0%, 100% {
    transform: rotate(0deg);
  }

  20%, 60% {
    transform: rotate(-25deg);
  }

  40%, 80% {
    transform: rotate(10deg);
  }
}

@media (max-width: 500px) {
    .github-corner:hover .octo-arm {
        animation: none;
    }

    .github-corner .octo-arm {
        animation: octocat-wave 560ms ease-in-out;
    }
}
"
`;

exports[`with additional props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <GithubCorner
    ariaLabel="Open GitHub project"
    bannerColor="#151513"
    direction="right"
    href="/"
    octoColor="#fff"
    size={80}
    style="display:none"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "aria-label": "Open GitHub project",
      "children": <svg
        height={80}
        style={
          Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
        viewBox="0 0 250 250"
        width={80}
      >
        <path
          className="octo-banner"
          d="M0 0l115 115h15l12 27 108 108V0z"
          fill="#151513"
        />
        <path
          className="octo-arm"
          d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
          style={
            Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            }
          }
        />
        <path
          className="octo-body"
          d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
        />
      </svg>,
      "className": "github-corner",
      "href": "/",
      "style": "display:none",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />,
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />,
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />,
        ],
        "height": 80,
        "style": Object {
          "fill": "#fff",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        "viewBox": "0 0 250 250",
        "width": 80,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-banner",
            "d": "M0 0l115 115h15l12 27 108 108V0z",
            "fill": "#151513",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-arm",
            "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
            "style": Object {
              "WebkitTransformOrigin": "130px 106px",
              "transformOrigin": "130px 106px",
            },
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "octo-body",
            "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "svg",
    },
    "type": "a",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "aria-label": "Open GitHub project",
        "children": <svg
          height={80}
          style={
            Object {
              "fill": "#fff",
              "position": "absolute",
              "right": 0,
              "top": 0,
            }
          }
          viewBox="0 0 250 250"
          width={80}
        >
          <path
            className="octo-banner"
            d="M0 0l115 115h15l12 27 108 108V0z"
            fill="#151513"
          />
          <path
            className="octo-arm"
            d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
            style={
              Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              }
            }
          />
          <path
            className="octo-body"
            d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
          />
        </svg>,
        "className": "github-corner",
        "href": "/",
        "style": "display:none",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              className="octo-banner"
              d="M0 0l115 115h15l12 27 108 108V0z"
              fill="#151513"
            />,
            <path
              className="octo-arm"
              d="M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16"
              style={
                Object {
                  "WebkitTransformOrigin": "130px 106px",
                  "transformOrigin": "130px 106px",
                }
              }
            />,
            <path
              className="octo-body"
              d="M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z"
            />,
          ],
          "height": 80,
          "style": Object {
            "fill": "#fff",
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          "viewBox": "0 0 250 250",
          "width": 80,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-banner",
              "d": "M0 0l115 115h15l12 27 108 108V0z",
              "fill": "#151513",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-arm",
              "d": "M128 109c-15-9-9-19-9-19 3-7 2-11 2-11-1-7 3-2 3-2 4 5 2 11 2 11-3 10 5 15 9 16",
              "style": Object {
                "WebkitTransformOrigin": "130px 106px",
                "transformOrigin": "130px 106px",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "octo-body",
              "d": "M115 115s4 2 5 0l14-14c3-2 6-3 8-3-8-11-15-24 2-41 5-5 10-7 16-7 1-2 3-7 12-11 0 0 5 3 7 16 4 2 8 5 12 9s7 8 9 12c14 3 17 7 17 7-4 8-9 11-11 11 0 6-2 11-7 16-16 16-30 10-41 2 0 3-1 7-5 11l-12 11c-1 1 1 5 1 5z",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "svg",
      },
      "type": "a",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
